istio/ingress/counter-app-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counter-demo-ingress
  namespace: counter-demo
#  konghq.com/plugins: proxy-cache-plugin, counter-demo
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: demo-app
            port:
              number: 5000
